Hopefully final cleanup for now.